--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,17 @@
+
+html{
+    background-image: src="IMG_2281.jpeg" no-repeat center center fixed;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 h1{
     text-align: center;
     font-size: 60px;
-    color: black;
-    background-color:turquoise
+    color: white;
+    background-color:rgb(45, 134, 125)
 }
+
 
