--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 
 html{
-    background-image: src="IMG_2281.jpeg" no-repeat center center fixed;
+    background-image: url(https://github.com/MegMcPhee/MegMcPhee.github.io/blob/master/IMG_2281.jpeg) no-repeat center center fixed;
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
