--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,9 +13,11 @@ h1{
     color: white;
     background-color:rgb(45, 134, 125)
 }
-img{
-    text-align: center;
-    box-shadow: 10px 5px 5px rgb(185, 184, 184);
+.sunglasses{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%
 }
 
 
